// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoMCM's purchase destination action: all fields 1`] = `
Object {
  "channel_type": "WE5OAc",
  "device": Object {
    "advertising_id": "WE5OAc",
    "ip": "WE5OAc",
    "language": "WE5OAc",
    "model": "WE5OAc",
    "os": "WE5OAC",
    "os_version": "WE5OAc",
    "ua": "WE5OAc",
    "unique_device_id": "WE5OAc",
  },
  "event_type": "PURCHASE",
  "id": "WE5OAc",
  "items": Array [
    Object {
      "id": "WE5OAc",
      "price": Object {
        "amount": -77696571172454.4,
        "currency": "USD",
      },
      "quantity": -7769657117245440,
      "seller_id": "WE5OAc",
    },
  ],
  "page_id": "WE5OAc",
  "revenue": Object {
    "amount": -77696571172454.4,
    "currency": "USD",
  },
  "session_id": "WE5OAc",
  "shipping_charge": Object {
    "amount": -77696571172454.4,
    "currency": "USD",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "WE5OAc",
}
`;

exports[`Testing snapshot for MolocoMCM's purchase destination action: required fields 1`] = `
Object {
  "channel_type": "WE5OAc",
  "event_type": "PURCHASE",
  "id": "WE5OAc",
  "items": Array [
    Object {
      "id": "WE5OAc",
    },
  ],
  "page_id": "WE5OAc",
  "revenue": Object {
    "amount": -77696571172454.4,
    "currency": "USD",
  },
  "session_id": "WE5OAc",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "WE5OAc",
}
`;
